footer, separate scripts, and home template

--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@ background: switch-home.jpg
   <div class="container">
     <section class="features">
       <div class="row">
-        <div class="col-12 feature">
-          <h2>Upcoming and Recent Performances</h2>
-            <p>Will go here</p>
+        <div  class="col-12 col-sm-4">
+          <h5 class="">Upcoming</h5>
+          <p>Here is some upcoming information</p>
         </div>
-        <div class="col-12 feature">
-            <h2>Featured Media</h2>
-            <p>Will go here</p>
+        <div  class="col-12 col-sm-4">
+          <h5 class="">News</h5>
+          <p>Here is some news information</p>
+        </div>
+        <div  class="col-12 col-sm-4">
+          <h5 class="">Support</h5>
+          <p>
+            We are currently raising funds to suuport our 2017-18 season. Help make our musical dreams become reality.
+            <a href="/support/index.html"><i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></a>
+          </p>
         </div>
       </div>
     </section>
