photos in /assets/images/masonry auto appear

--- a/media/photos.html
+++ b/media/photos.html
@@ -2,3 +2,15 @@
 layout: default
 title: Photos
 ---
+{%- assign image_files = site.static_files | where: "image", true -%}
+
+<div class="row">
+  <div class="col-12 text-center">
+    <h2>Photos</h2>
+  </div>
+  {%- for image in image_files -%}
+    <div class="col-3 p-3">
+      <img class="img-fluid" src="{{ image.path }}" alt="{{ image.basename }}">
+    </div>
+  {%- endfor -%}
+</div>
