change home page layout to default

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
-layout: home
+layout: default
+title: Home
 background: switch-home.jpg
 ---
 <div class="business-hero" style="background: url('{{ site.assets }}/images/{{ page.background }}'); background-size: cover; background-position: center 0px;">
