--- a/projects/repertoire.html
+++ b/projects/repertoire.html
@@ -3,75 +3,85 @@ layout: default
 title: Repertoire
 ---
 
-<div class="row">
-  <!-- create empty string to append tags -->
-  {% assign tagString = '' %}
-  <!-- capture the process of appending tags in a list -->
-  <!-- append current tag to tagString, strip all whitespace, but retain space between words -->
-  {% capture listOfTags %}
-    {%- for work in site.data.repertoire -%}
-      {%- if work.tags -%}
-        {%- for tag in work.tags -%}
-          {{ tagString | append: tag | append: ' ' }}
-        {%- endfor -%}
-      {% endif %}
-    {% endfor %}
-  {% endcapture %}
+<!-- create empty string to append tags -->
+{% assign tagString = '' %}
+<!-- capture the process of appending tags in a list -->
+<!-- append current tag to tagString, strip all whitespace, but retain space between words -->
+{% capture listOfTags %}
+  {%- for work in site.data.repertoire -%}
+    {%- if work.tags -%}
+      {%- for tag in work.tags -%}
+        {{ tagString | append: tag | append: ' ' }}
+      {%- endfor -%}
+    {% endif %}
+  {% endfor %}
+{% endcapture %}
 
-  <!-- split the list of tags, remove duplicates, and sort by alpha -->
-  {% assign tagArray = listOfTags | split: ' ' | uniq | sort %}
-
+<div class="d-flex justify-content-between">
+  <div>{{ piece.composer }}</div>
+  <div>
+    <em>{{ piece.title }}</em>
+    {% if piece.year == nil %}
+    {% else %}({{ piece.year }}){% endif %}
+  </div>
 </div>
+<div class="d-flex justify-content-center">{{ piece.instrumentation }}</div>
+{% if piece.extra == nil %}
+{% else %}
+  <div class="d-flex justify-content-center">{{ piece.extra }}</div>
+{% endif %}
 
-<div class="row">
-	<div class="filters col-3 mx-auto mb-3 mb-md-0">
-		<h5 class="text-center">Filters</h5>
-    <button
-			type="button"
-			class="btn btn-outline-secondary btn-sm btn-block filter-rep"
-			data-filter="all">
-			All
-		</button>
-    {%- for tag in tagArray -%}
-      <button
-        type="button"
-        class="btn btn-outline-secondary btn-sm btn-block filter-rep"
-        data-filter=".{{ tag }}">
-        {{ tag | capitalize }}
-      </button>
-    {%- endfor -%}
-	</div>
-
-
-  <div class="mixitup-rep col-9">
+<!-- split the list of tags, remove duplicates, and sort by alpha -->
+{% assign tagArray = listOfTags | split: ' ' | uniq | sort %}
+<div class="container">
+  <div class="row">
+    <div class="filters col-12 mx-auto mb-5">
+      <h1 class="text-center mt-5">Filters</h1>
+      <a
+        href="#"
+        class="filter-rep"
+        data-filter="all">
+        <span class="badge badge-light">All</span>
+      </a>
+      {%- for tag in tagArray -%}
+        <a
+          href="#"
+          class="filter-rep"
+          data-filter=".{{ tag }}">
+          <span class="badge badge-light">{{ tag | capitalize }}</span>
+        </a>
+      {%- endfor -%}
+    </div>
+  </div>
+  <div class="row mixitup-rep col-12">
     {%- assign sortedRep = site.data.repertoire | sort: 'title' -%}
     {%- for work in site.data.repertoire -%}
-        <div class="rep border border-primary {% for item in work.tags %}{{ item }} {% endfor %}">
-          <h2>Composer: {{ work.composer }}</h2>
-          <h3>Title: {{ work.title }}</h3>
-          {%- if work.movements -%}
-            {%- for movement in work.movements -%}
-              <p>{{ forloop.index }}. {{ movement }}</p>
+        <div class="col-md-4 py-3 rep {% for item in work.tags %}{{ item }} {% endfor %}">
+          <img class="img-fluid" src="https://placeholdit.co//i/500x250?bg=111111">
+          <div class="d-flex justify-content-between">
+            <div>{{ work.composer }}</div>
+            <div>
+              <em>{{ work.title }}</em>
+              {% if work.yearComposed == nil %}
+              {% else %}({{ work.yearComposed }}){% endif %}
+            </div>
+          </div>
+          <div class="d-flex justify-content-center">
+            {%- for instrument in work.instrumentation -%}
+              {%- if forloop.last == true -%}
+                and {{ instrument -}}
+              {% else %}
+                {{ instrument | append: ', ' }}
+              {%- endif -%}
             {%- endfor -%}
-          {%- endif -%}
-          <p>Duration: {{ work.duration }}</p>
-          <p>Year composed: {{ work.yearComposed }}</p>
-          <p>{{ work.commissionedOrWrittenFor }}</p>
-          <p>Instrumentation:</p>
-          <p>
-          {%- for instrument in work.instrumentation -%}
-            {%- if forloop.last == true -%}
-              and {{ instrument -}}
-            {% else %}
-              {{ instrument | append: ', ' }}
-            {%- endif -%}
-          {%- endfor -%}
-          </p>
+          </div>
+          {% comment %}
           {%- for item in work.media -%}
             <p>title: {{ item.title }} </p>
             <p>type: {{ item.type }} </p>
             <p>url: {{ item.url }} </p>
           {%- endfor -%}
+          {% endcomment %}
         </div>
     {%- endfor -%}
   </div>
