move headings inside includes to keep in same section

--- a/support/index.html
+++ b/support/index.html
@@ -2,13 +2,16 @@
 layout: page
 title: Support
 ---
-<p>We are seeking contributions to support our operational expenses for upcoming projects for our 2017-18 season. We hope that these performances and collaborations will be of interest to you as a supporter of the arts!</p>
 
-<h3 class="text-center">Current Donors</h3>
+<h3 class="text-center">Crowdfunding</h3>
+
+<p>Crowdfunding information will go here.</p>
+
+<p>We are seeking contributions to support our operational expenses for upcoming projects for our 2017-18 season. We hope that these performances and collaborations will be of interest to you as a supporter of the arts!</p>
 
 {%- include donors.html -%}
 
-<h3>Help commission an innovative new work!</h3>
+<h3 class="text-center">Help commission an innovative new work!</h3>
 
 <p>We have already generated a great deal of momentum as we plan our 2017-18 season! We are excited for collaborations with Swiss composer Katharina Rosenberger, American composer Matt Sargent, and Switch~’s Artistic Director Jason Thorpe Buchanan.</p>
 
@@ -27,7 +30,3 @@ Lauren Cauley, violin (PR Manager) <br>
 T.J. Borden, cello <br>
 Wei-Han Wu, piano <br>
 Megan Arns, percussion <br>
-
-<h3 class="text-center">Sponsors 2015-2017</h3>
-
-{%- include donor-scroller.html -%}
