finalist layout changes

--- a/projects/call-for-scores/index.html
+++ b/projects/call-for-scores/index.html
@@ -38,15 +38,141 @@ headerImage: header-blurry-vipa.jpg
     {% soundcloud tracks 246081331 %}
   </div>
 </div>
-<div class="row">
+<div class="row mb-5">
   <div class="col-12">
     <h3>Runner Up: D. Edward Davis</h3>
     <div class="row">
-      <div class="col-3">
+      <div class="col-12 col-md-3">
         <img class="" src="{{ site.images }}/16-17-call-davis.jpg" alt="">
       </div>
-      <div class="col-9">
+      <div class="col-12 col-md-9">
         D. Edward Davis (b. 1980, USA) is a composer whose work engages with the sounds of the environment, exploring processes, patterns, and systems inspired by nature. His pieces have recently been presented at Slow SD in San Diego (2017), the Bang on a Can Summer Festival (2016), Interlude AVL in Asheville, NC (2016), the New Music Gathering in Baltimore (2016), Something Said Only Once in Flagstaff, AZ (2015), the Brooklyn Acoustic Ecology Festival (2015), and the Under the Radar Festival in Omaha (2014). His work has been performed by the Witches Duo, Musica Nova (Israel), the Callithumpian Consort, Soundry Ensemble, yMusic, Da Capo Chamber Players, and many others. Davis holds degrees in composition from Duke University, Brooklyn College, and Northwestern University. His former teachers include Antoine Beuger, Scott Lindroth, John Supko, Amnon Wolman, David Grubbs, Amy Williams, and Michael Pisaro. More information available at: <a href="sound.warmsilence.org">sound.warmsilence.org</a>
+      </div>
+      {% soundcloud tracks 176819421 %}
+    </div>
+  </div>
+</div>
+
+<div class="row mb-5">
+  <div class="col-12">
+    <h3>Finalists</h3>
+    <div class="col-12 mb-5">
+      <h4>Elvira Garifzyanova</h4>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <img class="pb-3" src="{{ site.images }}/16-17-call-elvira.jpg" alt="">
+        </div>
+        <div class="col-12 col-md-9">
+          <p>
+            <strong>Elvira Garifzyanova</strong>
+            (b.1976, Russia) studied in Russia, Germany, and Switzerland with I.Dubinina (piano), A. Rudenko, G.Müller-Hornbach, I.Mundry, and M.Jarrell, and electronic music/informatics under G.Bennett, E.Daubresse and L.Naon. In 2012 she completed a year-long
+            training course in computer music at IRCAM in Paris. She is the recipient of awards from numerous international competitions and scholarships, attending masterclasses led by B.Ferneyhough, H. Lachenmann, H.Zender, A.Richard, M.Lanza, D.Smalley,
+            G.Apergis, C.Czernowin, G.F.Haas, B.Furrer, R.Saunders and P.Leroux. She has collaborated with C.Levine, P.Veale, and P.Gallois at the first Aeolian Academy Jeunesses Musicales (DE); with Hilliard-Ensemble (UK), Homme Armé (IT), Prime (CH), Vortex
+            (CH), Meitar (Israel), SurPlus (DE), Reconsil (AT), ensemble für Neue Musik Zürich, DissonArt (GR), Mircea Ardeleanu, C.Schlüter, J.N.Attard and Lyon contemporary dance, the South West German Radio Symphony Orchestra Stuttgart, the Berner
+            Symphonieorchestra (CH), Musikkollegium Winterthur (CH), musicians of the Tonhalle-Orchester Zürich, and Les Cornets Noirs. Festival performances include the 20th Intn'l New Music Festival Sound Ways in St.-Petersburg (RU), Antifonia-40 Festival
+            (Cluj-Napoca, RO), Next generation 4.0 Kommunikation Festival ZKM (Karlsruhe, DE), the Archipel Festival (Geneva, CH), Inaudita Early Music Tuscan Festival Pisa (IT), CEME Festival (Israel), Mixtur-Festival (SP), Music Biennale Zagreb (Croatia). She
+            is included in the Swiss Music Edition's (SME/EMS).
+          </p>
+          <p>
+            <a href="http://elvira-garifzyanova.strikingly.com/">Elvira Garifzyanova Website</a>
+          </p>
+          {% soundcloud tracks 244394940 %}
+        </div>
+      </div>
+    </div>
+    <div class="col-12 mb-5">
+      <h4>Victor Ibarra</h4>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <img class="pb-3" src="{{ site.images }}/16-17-call-ibarra.jpg" alt="">
+        </div>
+        <div class="col-12 col-md-9">
+          <p>
+            <strong>Victor Ibarra</strong>
+            (b.1978, Mexico) has had a rich training in his own country as well as in France and Switzerland, with musicians such as Hebert Vázquez, José Luis Castillo, Edith Lejet, Daniel D’Adamo and Michael Jarrell. Honors include first place in the Alea III
+            competition (USA), first place in Auditorio Nacional de Música de España competition, first prize in the Mauricio Kagel competition, the Zeitklang Award (Austria), among other international recognitions. Ibarra was recently selected in the Ensemble
+            Aleph’s 7th International Forum for Young Composers, and as a member of the Casa de Velazquez – French Academy in Madrid. He has completed his Masters in Composition from the National Music and Dance Conservatory of Lyon, unanimously winning first
+            prize and recognition by the Salabert Foundation. From 2014 he is named a member of the Sistema Nacional de Creadores de Arte from the National Fund for Culture and Arts of Mexico. Ibarra’s style draws on the most varied resources that outline a
+            genuine language. Every part is immersed in micro-tonality, with a precise harmonic structure that becomes, many times intertwined and obsessive. Accented by the rhythmic energy that becomes an essential component of his speech or use of instrumental
+            virtuosity, as a tool to create spaces and dimensions. The influence of French-spectralism helps him to work with a coloristic and timbral intention, although not exclusively, and a dialogue interdisciplinary which, usually set with the plastic arts,
+            prints a personal mark on his work that is approached from clarity, in compositional instincts and ideals.
+          </p>
+          <p>
+            <a href="http://www.victoribarra.net/">Victor Ibarra Website</a>
+          </p>
+          {% soundcloud tracks 207443143 %}
+        </div>
+      </div>
+    </div>
+    <div class="col-12 mb-5">
+      <h4>Emanuele Palumbo</h4>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <img class="pb-3" src="{{ site.images }}/16-17-call-palumbo.jpg" alt="">
+        </div>
+        <div class="col-12 col-md-9">
+          <p>
+            <strong>Emanuele Palumbo</strong>
+            (b.1987, Italy) lives in Paris. His first musical experiences came from playing in rock groups. He studied composition with Gabriele Manca in Milan, Gérard Pesson at CNSM in Paris, and computer music at IRCAM, cursus 1 & 2 with Hèctor Parra.
+            Palumbo’s music has been performed by Ensemble Multilatérale, Ensemble Linea, Ensemble Talea, MDI Ensemble, and soloists such as Maria Grazia Bellocchio, Christophe Mathias, Josephine Besançon and Domenico Melchiorre. He attended masterclasses by
+            Francesco Filidei, Franck Bedrossian, Pierluigi Billone and Raphaël Cendo. His works have been performed in venues and festivals as varied as the Manifeste Festival, the Royaumont Voix Nouvelles and Festival Pontino, and has been broadcast on Radio
+            France. In his music he creates musical temporal structures based on sounds derived from an instrumental research, with an objective of achieving a strength and uniqueness of sound. Sometimes using accessories, he creates unusual modes of playing to
+            obtain new sounds. The instrumental ensemble is charged in this with a new aura. He is currently working on a piece for piano and transducers, and he is starting a project of biophysiological music with dancers, performers and musician, in particular
+            he is developing a device for physiological and emotional recognition (LISTEN).
+          </p>
+          <p>
+            <a href="https://soundcloud.com/emanuele-palumbo">Emanuele Palumbo Website</a>
+          </p>
+          {% soundcloud tracks 285563272 %}
+        </div>
+      </div>
+    </div>
+    <div class="col-12 mb-5">
+      <h4>Daniel Silliman</h4>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <img class="pb-3" src="{{ site.images }}/16-17-call-silliman.jpg" alt="">
+        </div>
+        <div class="col-12 col-md-9">
+          <p>
+            <strong>Daniel Silliman</strong>
+            (b.1993, USA) is an American composer whose work has been commissioned and performed throughout the US by various ensembles including the New York Youth Symphony, Alarm Will Sound, SAKURA Cello Quintet, Music from Copland House, and others. His work
+            has been recognized with various awards and honors, including the 2015 William Schuman Prize from the BMI Foundation, an ASCAP Morton Gould Young Composer Award, (winner 2015, finalist 2012) with additional support from Copland House, the American
+            Festival for the Arts, and Access Contemporary Music Chicago.
+          </p>
+          <p>
+            ​Born in upstate New York, Daniel grew up near Houston and is a graduate of the USC Thornton School of Music, and in 2015 joined the Department of Music at Princeton University to begin work on his PhD.
+          </p>
+          <p>
+            <a href="http://danielsilliman.com/">Daniel Silliman Website</a>
+          </p>
+          {% soundcloud tracks 304844138 %}
+        </div>
+      </div>
+    </div>
+    <div class="col-12 mb-5">
+      <h4>Igor C. Silva</h4>
+      <div class="row">
+        <div class="col-12 col-md-3">
+          <img class="pb-3" src="{{ site.images }}/16-17-call-silva.jpg" alt="">
+        </div>
+        <div class="col-12 col-md-9">
+          <p>
+            Igor C. Silva (b.1989, Portugal) is a composer devoted to electronics and new media music, creating projects where performers, computers and many noisy and psychedelic things happen on stage, creating a multi-sensorial experience. Silva works
+            regularly with ensembles, performers and orchestras, receiving many commissions from festivals, and publishing several recordings of his music.
+          </p>
+          <p>
+            Igor C Silva also works regularly with soloists, ensembles and jazz groups, devoting part of his musical and composing activity to improvisation and interactive performances with electronics and multimedia tools. Silva was the Resident Young Composer
+            at Casa da Música for 2012 and received several commissions and worked with Orchestra Sinfónica do Porto, Remix Ensemble, among others. He was also the Composer in Residence at Miso Music Studios in 2015, were he started to develop a new multimedia
+            work that will be premiered in 2017. Honors include 1st Prize at the “2nd Composition Competition Casa da Música/ESMAE" with Terminus, for viola, live-electronics and lighting, 1st Prize at the "5th Intn'l Composition Competition of Póvoa de
+            Varzim" with Flipbook, for quintet and electronics, and the 1st Prize at the “Concurso Internacional de Composição GMCL/Jorge Peixinho” with Blood Ink, for small ensemble and electronics. Igor C Silva graduated in composition at Escola Superior de
+            Música, Artes e Espetáculo (ESMAE) in 2011, and finished a Master degree in Composition and Music Theory in 2013. He is currently finishing a Master Degree in live-electronics at Conservatorium van Amsterdam.
+          </p>
+          <p>
+            <a href="http://www.igorcsilva.com/">Igor C. Silva Website</a>
+          </p>
+          {% soundcloud tracks 241684833 %}
+        </div>
       </div>
     </div>
   </div>
