--- a/404.html
+++ b/404.html
@@ -1,13 +1,8 @@
 ---
-layout: default
+layout: page
 ---
 
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -16,7 +11,7 @@ layout: default
   }
 </style>
 
-<div class="container">
+<div class="text-center">
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
