--- a/concerts/index.html
+++ b/concerts/index.html
@@ -37,7 +37,7 @@ headerImage: header-vipa-ensemble.jpg
         </p>
       {%- endfor -%}
       <p class="mt-3">
-        <a href="{{ concert.url }}" type="button" class="btn btn-outline-dark" name="button">Details</a>
+        <button href="{{ concert.url }}" class="btn btn-outline-dark">Details</button>
       </p>
     </div>
   </div>
