--- a/concerts/index.html
+++ b/concerts/index.html
@@ -37,7 +37,7 @@ headerImage: header-vipa-ensemble.jpg
         </p>
       {%- endfor -%}
       <p class="mt-3">
-        <button href="{{ concert.url }}" class="btn btn-outline-dark">Details</button>
+        <button class="btn btn-outline-dark"><a href="{{ concert.url }}">Details</a></button>
       </p>
     </div>
   </div>
