get button link tags correct

--- a/concerts/index.html
+++ b/concerts/index.html
@@ -37,7 +37,7 @@ headerImage: header-vipa-ensemble.jpg
         </p>
       {%- endfor -%}
       <p class="mt-3">
-        <button class="btn btn-outline-dark"><a href="{{ concert.url }}">Details</a></button>
+        <a class="btn btn-outline-dark" href="{{ concert.url }}" role="button">Details</a>
       </p>
     </div>
   </div>
