photos portfolio includes now has folderName variable

--- a/media/photos.html
+++ b/media/photos.html
@@ -4,4 +4,4 @@ title: Photos
 ---
 {%- assign image_files = site.static_files | where: "image", true -%}
 
-{% include photos-portfolio.html %}
+{% include photos-portfolio.html folderName='testing' %}
