change include name to photos-portfolio-masonry

--- a/media/photos.html
+++ b/media/photos.html
@@ -3,4 +3,4 @@ layout: page
 title: Photos
 ---
 
-{% include photos-portfolio.html folderName='testing' %}
+{% include photos-portfolio-masonry.html folderName='testing' %}
