--- a/concerts/index.html
+++ b/concerts/index.html
@@ -37,7 +37,7 @@ headerImage: header-vipa-ensemble.jpg
         </div>
       {%- endfor -%}
       <p class="mt-3">
-        <a class="btn btn-outline-dark" href="{{ concert.url }}" role="button">Details</a>
+        <a class="btn btn-round btn-sm btn-gray" href="{{ concert.url }}" role="button">Details</a>
       </p>
     </div>
   </div>
