--- a/about/repertoire/index.html
+++ b/about/repertoire/index.html
@@ -1,5 +1,6 @@
 ---
 layout: page
+container: fluid
 title: Repertoire
 ---
 
@@ -23,46 +24,52 @@ title: Repertoire
 {%- assign sortedRep = site.repertoire | sort: 'composer.last' -%}
 
 <!-- Portfolio-->
-	<section class="module p-0">
-		<div class="container-fluid">
-			<div class="row row-portfolio-filter">
-				<div class="col-sm-12">
-					<ul class="filters h5" id="filters">
-						<li><a class="current" href="#" data-filter="*">All</a></li>
-            {%- for tag in tagArray -%}
-              <li><a href="#" data-filter=".{{ tag }}">{{ tag | capitalize }}</a></li>
-            {%- endfor -%}
-					</ul>
-				</div>
+<div class="row row-portfolio-filter">
+	<div class="col-sm-12">
+		<ul class="filters h5" id="filters">
+			<li><a class="current" href="#" data-filter="*">All</a></li>
+      <li><a href="#" data-filter=".trio">Trio</a></li>
+      <li><a href="#" data-filter=".quartet">Quartet</a></li>
+      <li><a href="#" data-filter=".quintet">Quintet</a></li>
+      <li><a href="#" data-filter=".sextet">Sextet</a></li>
+      <li><a href="#" data-filter=".septet">Septet</a></li>
+      <li><a href="#" data-filter=".octet">Octet</a></li>
+      <li><a href="#" data-filter=".nonet">Nonet</a></li>
+      {% comment %}
+      {%- for tag in tagArray -%}
+        <li><a href="#" data-filter=".{{ tag }}">{{ tag | capitalize }}</a></li>
+      {%- endfor -%}
+      {% endcomment %}
+
+		</ul>
+	</div>
+</div>
+<div class="row row-portfolio" date-portfolio-type="standard" data-columns="3">
+	<div class="grid-sizer"></div>
+  {%- for work in sortedRep -%}
+		<div class="portfolio-item px-1 {% for item in work.tags %}{{-item }} {% endfor %}{{ work.size -}}">
+			<div class="portfolio-wrapper">
+				<img src="https://placeholdit.co//i/500x250?bg=282F37" alt="">
+				<div class="portfolio-overlay"></div>
 			</div>
-			<div class="row row-portfolio" date-portfolio-type="standard" data-columns="3">
-				<div class="grid-sizer"></div>
-        {%- for work in sortedRep -%}
-  				<div class="portfolio-item px-1 {% for item in work.tags %}{{ item }} {% endfor %}">
-  					<div class="portfolio-wrapper">
-  						<img src="https://placeholdit.co//i/500x250?bg=282F37" alt="">
-  						<div class="portfolio-overlay"></div>
-  					</div>
-  					<div class="portfolio-caption">
-  						<h5 class="portfolio-title">{{ work.title }} {% if work.yearComposed == nil %}{% else %}({{ work.yearComposed }}){% endif %}</h5>
-  						<div class="portfolio-subtitle font-serif">{{ work.composer.first }} {{ work.composer.last }}</div>
-              <div class="portfolio-subtitle font-serif">
-                {{ work.size }} {% for tag in work.tags %}{% if tag == 'electronics' %}and electronics{% endif %}{% endfor %}
-                {% comment %}
-                {%- for instrument in work.instrumentation -%}
-                  {%- if forloop.last == true -%}
-                    and {{ instrument -}}
-                  {% else %}
-                    {{ instrument | append: ', ' }}
-                  {%- endif -%}
-                {%- endfor -%}
-                {% endcomment %}
-              </div>
-  					</div>
-            <a class="portfolio-link" href="{{ work.url }}"></a>
-          </div>
-        {%- endfor -%}
+			<div class="portfolio-caption">
+				<h5 class="portfolio-title">{{ work.title }} {% if work.yearComposed == nil %}{% else %}({{ work.yearComposed }}){% endif %}</h5>
+				<div class="portfolio-subtitle font-serif font-weight-normal">{{ work.composer.first }} {{ work.composer.last }}</div>
+        <div class="portfolio-subtitle font-serif">
+          {{ work.size }} {% for tag in work.tags %}{% if tag == 'electronics' %}and electronics{% endif %}{% endfor %}
+          {% comment %}
+          {%- for instrument in work.instrumentation -%}
+            {%- if forloop.last == true -%}
+              and {{ instrument -}}
+            {% else %}
+              {{ instrument | append: ', ' }}
+            {%- endif -%}
+          {%- endfor -%}
+          {% endcomment %}
+        </div>
 			</div>
-		</div>
-	</section>
+      <a class="portfolio-link" href="{{ work.url }}"></a>
+    </div>
+  {%- endfor -%}
+</div>
 	<!-- Portfolio end-->
