add solo and duo tags

--- a/about/repertoire/index.html
+++ b/about/repertoire/index.html
@@ -27,6 +27,8 @@ title: Repertoire
 	<div class="col-sm-12">
 		<ul class="filters h5" id="filters">
 			<li><a class="current" href="#" data-filter="*">All</a></li>
+      <li><a href="#" data-filter=".solo">Solo</a></li>
+      <li><a href="#" data-filter=".duo">Duo</a></li>
       <li><a href="#" data-filter=".trio">Trio</a></li>
       <li><a href="#" data-filter=".quartet">Quartet</a></li>
       <li><a href="#" data-filter=".quintet">Quintet</a></li>
