attempt to change style to optima

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h1 class="h1">[Switch~ Ensemble]</h1>
+				<h1 class="h1" style="font-family:optima;">>[Switch~ Ensemble]</h1>
 				<p class="m-b-30">A new music ensemble for the 21st century</p>
 				</p>
 			</div>
