--- a/media/media.html
+++ b/media/media.html
@@ -2,7 +2,12 @@
 layout: page
 title: Media
 ---
-
+<html>
+<head>
+</head>
+<body>
 Under construction!
-
-<iframe src="http://switchensemble.weebly.com/media.html"> 
+Legacy site:
+<iframe src="http://switchensemble.weebly.com/media.html">
+</body>
+</html>
