temporary test of media masonry page

--- a/media/media.html
+++ b/media/media.html
@@ -2,12 +2,5 @@
 layout: page
 title: Media
 ---
-<html>
-<head>
-</head>
-<body>
-Under construction!
-Legacy site:
-<iframe src="http://switchensemble.weebly.com/media.html">
-</body>
-</html>
+
+{% include media-portfolio-masonry.html folderName='testing' %}
