--- a/concerts/index.html
+++ b/concerts/index.html
@@ -12,7 +12,7 @@ headerImage: header-vipa-ensemble.jpg
       {%- if concert.thumbnail -%}
         <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/concert-thumbnails/{{ concert.thumbnail }}" alt=""></a>
       {% else %}
-        <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="https://placeholdit.co//i/500x250?bg=282F37" alt=""></a>
+        <a href="{{ concert.url }}"><img class="img-fluid mb-3 mb-md-0" src="{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg" alt=""></a>
       {%- endif -%}
     </div>
     <div class="col-12 col-md-7">
