--- a/media/media.html
+++ b/media/media.html
@@ -10,7 +10,7 @@ title: Audio and Video
     {%- unless item.url == nil -%}
 
     <!-- Media entry-->
-    <div class="row">
+    <div class="row mb-3">
       <div class="col-md-8 py-3">
         {%- if item.url contains 'youtube' or item.url contains 'vimeo' -%}
           <div><iframe class="embed-responsive-item" src="{{ item.url }}" allowfullscreen></iframe></div>
