reformatted events page

--- a/projects/events/index.html
+++ b/projects/events/index.html
@@ -3,4 +3,5 @@ layout: page
 title: Residencies
 ---
 
-<h1>A listing of our residencies and workshops is coming soon.</h1>
+<h1>Coming Soon</h1>
+<p class="lead text-center">A listing of our residencies and workshops</p>
