--- a/about/repertoire/index.html
+++ b/about/repertoire/index.html
@@ -45,10 +45,10 @@ title: Repertoire
 		</ul>
 	</div>
 </div>
-<div class="row row-portfolio" date-portfolio-type="standard" data-columns="3">
+<div class="row row-portfolio" data-columns="3">
 	<div class="grid-sizer"></div>
   {%- for work in sortedRep -%}
-		<div class="portfolio-item repertoire-item px-1 {% for item in work.tags %}{{-item }} {% endfor %}{{ work.size -}}">
+		<div class="portfolio-item repertoire-item p-2 {% for item in work.tags %}{{-item }} {% endfor %}{{ work.size -}}">
 			<div class="portfolio-wrapper">
         {%- if work.headerImage -%}
           <img src="{{ site.images }}/{{ work.headerImage }}" alt="">
@@ -56,24 +56,24 @@ title: Repertoire
           <img src="{{ site.images }}/repertoire-images/switch_misc_1000x500px.jpg" alt="">
         {%- endif -%}
 				<div class="portfolio-overlay"></div>
-			</div>
-			<div class="portfolio-caption">
-				<h5 class="portfolio-title">{{ work.title }} {% if work.yearComposed == nil %}{% else %}({{ work.yearComposed }}){% endif %}</h5>
-				<div class="portfolio-subtitle font-serif font-weight-normal">{{ work.composer.first }} {{ work.composer.last }}</div>
-        <div class="portfolio-subtitle font-serif">
-          {{ work.size }} {% for tag in work.tags %}{% if tag == 'electronics' %}and electronics{% endif %}{% endfor %}
-          {% comment %}
-          {%- for instrument in work.instrumentation -%}
+        <div class="portfolio-caption">
+          <h5 class="portfolio-title">{{ work.title }} {% if work.yearComposed == nil %}{% else %}({{ work.yearComposed }}){% endif %}</h5>
+          <div class="portfolio-subtitle font-serif font-weight-normal">{{ work.composer.first }} {{ work.composer.last }}</div>
+          <div class="portfolio-subtitle font-serif">
+            {{ work.size }} {% for tag in work.tags %}{% if tag == 'electronics' %}and electronics{% endif %}{% endfor %}
+            {% comment %}
+            {%- for instrument in work.instrumentation -%}
             {%- if forloop.last == true -%}
-              and {{ instrument -}}
+            and {{ instrument -}}
             {% else %}
-              {{ instrument | append: ', ' }}
+            {{ instrument | append: ', ' }}
             {%- endif -%}
-          {%- endfor -%}
-          {% endcomment %}
+            {%- endfor -%}
+            {% endcomment %}
+          </div>
         </div>
+        <a class="portfolio-link" href="{{ work.url }}"></a>
 			</div>
-      <a class="portfolio-link" href="{{ work.url }}"></a>
     </div>
   {%- endfor -%}
 </div>
