--- a/index.html
+++ b/index.html
@@ -13,4 +13,25 @@ layout: default
 		</div>
 	</div>
 </section>
+<section class="module-header module-gray p-t-100 p-b-100">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<h1 class="h3 m-b-20">2017-18 Crowdfunding Campaign</h1>
+				<p class="m-b-40">Please consider making a donation to support our 2017-18 concert season!</p>
+				<div class="d-flex justify-content-center">
+					<div class="d-flex mb-5">
+					  <a class="btn btn-lg btn-round btn-primary" href="/support/" role="button">More Info</a>
+					</div>
+					<div class="d-flex mb-5">
+					  <a class="btn btn-lg btn-round btn-primary" href="#" role="button">Donate</a>
+					</div>
+				</div>
+				<div class="d-flex justify-content-center mb-5">
+				  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/Sc6gn-AZd3E" frameborder="0" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 <!-- Page Header end-->
