--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
 					  <a class="btn btn-lg btn-round btn-primary" href="/support/" role="button">More Info</a>
 					</div>
 					<div class="d-flex mb-5">
-					  <a class="btn btn-lg btn-round btn-primary" href="#" role="button">Donate</a>
+					  <a class="btn btn-lg btn-round btn-primary" href="https://fundraising.fracturedatlas.org/the-switch-ensemble/campaigns/1516" role="button">Donate</a>
 					</div>
 				</div>
 				<div class="d-flex justify-content-center mb-5">
