--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ layout: default
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<h1 class="h3 m-b-20">2017-18 Crowdfunding Campaign</h1>
+				<h1 class="h3 m-b-20">Support New Music</h1>
 				<p class="m-b-40">Please consider making a donation to support our 2017-18 concert season!</p>
 				<div class="d-flex justify-content-center">
 					<div class="d-flex mb-5">
 					  <a class="btn btn-lg btn-round btn-primary" href="/support/" role="button">More Info</a>
 					</div>
 					<div class="d-flex mb-5">
-					  <a class="btn btn-lg btn-round btn-primary" href="https://fundraising.fracturedatlas.org/the-switch-ensemble/campaigns/1516" role="button">Donate</a>
+					  <a class="btn btn-lg btn-round btn-primary" href="https://www.fracturedatlas.org/site/fiscal/profile?id=14815" role="button">Donate</a>
 					</div>
 				</div>
 				<div class="d-flex justify-content-center mb-5">
